# vinylsplit-audacity

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/release-notes/: 0.5.2.md  1.0.0.md  1.1.0.md
.github/workflows/: release.yml
docs/: architecture.md  audacity_commands.md  snap-store-classic-request.md
packaging/linux/: README.md  build-deb.sh  build-snap.sh  build.sh  generate_icon.py  launcher.py  vinylsplit.desktop  vinylsplit.spec
packaging/linux/debian/: copyright  postrm
scratch/: list_commands.py  test_connection.py
scripts/: connect-audacity.sh  publish-snap-store.sh
snap/: README.md  snapcraft.yaml
snap/gui/: vinylsplit.desktop  vinylsplit.metainfo.xml
src/vinylsplit/: __init__.py  __main__.py  app.py
src/vinylsplit/audacity/: __init__.py  client.py  connection.py  import_audio.py  responses.py
src/vinylsplit/core/: __init__.py  container.py  logging_config.py  settings.py
src/vinylsplit/export/: __init__.py  artwork.py  audacity_exporter.py  engine.py  filenames.py  formats.py  metadata.py  models.py  tagger.py
src/vinylsplit/labels/: __init__.py  audacity_regions.py  layout_engine.py  region_review.py  time_format.py
src/vinylsplit/metadata/: __init__.py  local_tags.py  models.py  session.py  tracks.py
src/vinylsplit/musicbrainz/: __init__.py  client.py  exceptions.py  parsers.py
src/vinylsplit/ui/: __init__.py
tests/: conftest.py  test_app.py  test_artist_search_page.py  test_audacity_client.py  test_audacity_connection.py  test_audacity_regions.py  test_container.py  test_export_artwork.py  test_export_engine.py  test_export_filenames.py  test_export_formats.py  test_export_metadata.py  test_export_tagger.py  test_finish_page.py  test_generate_album_layout_page.py  test_import_audio.py  test_layout_engine.py  test_local_tags.py  test_metadata_tracks.py  test_musicbrainz_client.py  test_musicbrainz_parsers.py  test_region_review.py  test_release_selection_page.py  test_review_page.py  test_track_list_page.py  test_ui_style.py  test_waveform_page.py  test_waveform_peaks.py  test_waveform_widget.py  test_welcome_page.py  test_wizard_navigation.py  test_wizard_session.py
tests/fixtures/: musicbrainz_release.json  musicbrainz_search.json
(+18 files in other folders)
