[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vinylsplit-audacity"
version = "0.5.2"
description = "Guide vinyl digitization by splitting tracks in Audacity using MusicBrainz metadata."
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [
    { name = "VinylSplit Contributors" },
]
keywords = ["audacity", "vinyl", "musicbrainz", "digitization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "PySide6>=6.8.0",
    "mutagen>=1.47.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "pytest>=8.3.0",
    "pytest-qt>=4.4.0",
    "ruff>=0.9.0",
]
packaging = [
    "pyinstaller>=6.10.0",
]

[project.scripts]
vinylsplit = "vinylsplit.app:main"

[project.urls]
Homepage = "https://github.com/vinylsplit/vinylsplit-audacity"
Documentation = "https://github.com/vinylsplit/vinylsplit-audacity#readme"
Repository = "https://github.com/vinylsplit/vinylsplit-audacity"

[tool.hatch.build.targets.wheel]
packages = ["src/vinylsplit"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/assets",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
qt_api = "pyside6"
addopts = "-ra"

[tool.black]
line-length = 88
target-version = ["py314"]
src = ["src", "tests"]

[tool.ruff]
line-length = 88
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line length handled by black
]

[tool.ruff.lint.isort]
known-first-party = ["vinylsplit"]